--- a/data/blog/the-evolving-personal-website.mdx
+++ b/data/blog/the-evolving-personal-website.mdx
@@ -34,7 +34,7 @@ Growing tired of tumblr's branded url the next version was a pure html/css site 
   height={300}
 />
 
-Somewhere along here my website got redesigned at least twice, but I can't find any of those assets so let's fast forward to 2018. The new design put my work front and center, solving the issue of the previous one. This is the time I realized that the static nature of my personal website would be a perfect fit for **GitHub pages**. I previously purchased my domain at my hosting provider, but constant price increases made me annoyed so now I dropped them completely and bought and switched to [yuricunha.com](http://yuricunha.com) some place else instead.
+Somewhere along here my website got redesigned at least twice, but I can't find any of those assets so let's fast forward to 2018. The new design put my work front and center, solving the issue of the previous one. This is the time I realized that the static nature of my personal website would be a perfect fit for **GitHub pages**. I previously purchased my domain at my hosting provider, but constant price increases made me annoyed so now I dropped them completely and bought and switched to [beta.yuricunha.com](http://beta.yuricunha.com) some place else instead.
 
 <Image
   alt="Personal website version 2018"
@@ -56,4 +56,4 @@ Around this time javascript frameworks started getting lots of attention, and my
   height={1628}
 />
 
-If I look back at my personal websites over the years, every new version has resulted in me learning new techniques and tools and this is for me what it's all about. This version of my personal website is my playground. It's where I can learn and keep improving. It's where I can give back to the community what I've learned. It's where I can show my work. It's [yuricunha.com](http://yuricunha.com) v2021.
+If I look back at my personal websites over the years, every new version has resulted in me learning new techniques and tools and this is for me what it's all about. This version of my personal website is my playground. It's where I can learn and keep improving. It's where I can give back to the community what I've learned. It's where I can show my work. It's [beta.yuricunha.com](http://beta.yuricunha.com) v2021.
