--- a/data/blog/git-newmr.mdx
+++ b/data/blog/git-newmr.mdx
@@ -70,7 +70,7 @@ All your aliases are stored in the global git config located in `~home/<username
 ```bash
 [user]
   name = Samuel Kraft
-  email = me@yuricunha.com
+  email = me@beta.yuricunha.com
 [alias]
   newmr = "!f() { git stash save && git checkout master && git pull && git checkout -b $1 && git stash apply && git add . && git commit -m $1 && git push -u origin HEAD -o merge_request.create; }; f"
   newpr = "!f() { git stash save && git checkout master && git pull && git checkout -b $1 && git stash apply && git add . && git commit -m $1 && git push -u origin HEAD && gh pr create; }; f"
