feat: testing production

--- a/packages/i18n/src/messages/en.json
+++ b/packages/i18n/src/messages/en.json
@@ -139,7 +139,7 @@
   "dialog": {
     "sign-in": {
       "continue-with": "Continue with {provider}",
-      "description": "to continue to honghong.me"
+      "description": "to continue to yuricunha.com"
     }
   },
   "error": {
