--- a/apps/web/src/content/projects/zh-CN/one-blog.mdx
+++ b/apps/web/src/content/projects/zh-CN/one-blog.mdx
@@ -1,7 +1,7 @@
 ---
 name: One Blog
 description: 一个简单的全端博客
-homepage: https://one-blog.honghong.me
+homepage: https://one-blog.yuricunha.com
 github: https://github.com/tszhong0411/one-blog
 techstack:
   - Typescript
