--- a/packages/i18n/src/messages/zh-CN.json
+++ b/packages/i18n/src/messages/zh-CN.json
@@ -139,7 +139,7 @@
   "dialog": {
     "sign-in": {
       "continue-with": "使用 {provider} 继续",
-      "description": "以继续使用 honghong.me"
+      "description": "以继续使用 yuricunha.com"
     }
   },
   "error": {
