--- a/packages/i18n/src/messages/zh-TW.json
+++ b/packages/i18n/src/messages/zh-TW.json
@@ -139,7 +139,7 @@
   "dialog": {
     "sign-in": {
       "continue-with": "使用 {provider} 繼續",
-      "description": "以繼續使用 honghong.me"
+      "description": "以繼續使用 yuricunha.com"
     }
   },
   "error": {
