fix: wrong typo

--- a/apps/web/src/content/projects/en/blog.mdx
+++ b/apps/web/src/content/projects/en/blog.mdx
@@ -2,7 +2,7 @@
 name: Blog
 description: Share my knowledge and experience
 homepage: https://yuricunha.com
-github: https://github.com/tszhong0411/yuricunha.com
+github: https://github.com/tszhong0411/beta-website
 techstack:
   - Typescript
   - PostgreSQL
