--- a/apps/web/src/content/projects/zh-TW/blog.mdx
+++ b/apps/web/src/content/projects/zh-TW/blog.mdx
@@ -2,7 +2,7 @@
 name: Blog
 description: 分享我的知識和經驗
 homepage: https://yuricunha.com
-github: https://github.com/tszhong0411/yuricunha.com
+github: https://github.com/tszhong0411/beta-website
 techstack:
   - Typescript
   - PostgreSQL
