--- a/apps/web/src/content/pages/en/about.mdx
+++ b/apps/web/src/content/pages/en/about.mdx
@@ -28,7 +28,7 @@ Thanks to **Timothy Lin** for the
 
 Here are some websites that inspired me a lot to build a fantastic website.
 
-Refer to [README](https://github.com/tszhong0411/yuricunha.com?tab=readme-ov-file#credits)
+Refer to [README](https://github.com/tszhong0411/beta-website?tab=readme-ov-file#credits)
 
 ## Social links
 
