--- a/apps/web/src/content/pages/zh-TW/about.mdx
+++ b/apps/web/src/content/pages/zh-TW/about.mdx
@@ -28,7 +28,7 @@
 
 以下是一些對我構建一個出色網站啟發良多的網站。
 
-詳見 [README](https://github.com/tszhong0411/yuricunha.com?tab=readme-ov-file#credits)
+詳見 [README](https://github.com/tszhong0411/beta-website?tab=readme-ov-file#credits)
 
 ## 社交連結
 
