--- a/apps/web/src/content/projects/en/friend-quiz.mdx
+++ b/apps/web/src/content/projects/en/friend-quiz.mdx
@@ -1,7 +1,7 @@
 ---
 name: Friend quiz cheat tool
 description: Get full score in friend quiz
-homepage: https://friendquiz.yuricunha.com/
+homepage: https://friendquiz.honghong.me/
 github: https://github.com/tszhong0411/friend-quiz
 techstack:
   - Typescript
