--- a/apps/web/src/content/projects/en/blog.mdx
+++ b/apps/web/src/content/projects/en/blog.mdx
@@ -1,8 +1,8 @@
 ---
 name: Blog
 description: Share my knowledge and experience
-homepage: https://yuricunha.com
-github: https://github.com/tszhong0411/beta-website
+homepage: https://honghong.me
+github: https://github.com/tszhong0411/honghong.me
 techstack:
   - Typescript
   - PostgreSQL
