--- a/apps/web/src/content/projects/en/links.mdx
+++ b/apps/web/src/content/projects/en/links.mdx
@@ -1,7 +1,7 @@
 ---
 name: Links
 description: All my social media links in one place
-homepage: https://links.yuricunha.com
+homepage: https://links.honghong.me
 github: https://github.com/tszhong0411/links
 techstack:
   - Typescript
