--- a/apps/web/src/content/projects/en/one-blog.mdx
+++ b/apps/web/src/content/projects/en/one-blog.mdx
@@ -1,7 +1,7 @@
 ---
 name: One Blog
 description: A simple full-stack blog
-homepage: https://one-blog.yuricunha.com
+homepage: https://one-blog.honghong.me
 github: https://github.com/tszhong0411/one-blog
 techstack:
   - Typescript
