--- a/apps/web/src/content/projects/zh-TW/links.mdx
+++ b/apps/web/src/content/projects/zh-TW/links.mdx
@@ -1,7 +1,7 @@
 ---
 name: Links
 description: 將我所有的社交媒體連結集中在一個地方
-homepage: https://links.yuricunha.com
+homepage: https://links.honghong.me
 github: https://github.com/tszhong0411/links
 techstack:
   - Typescript
